k8s/auth-server-database-deployment.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysqlcontainer
  namespace: authserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      tolerations:
        - key: "prod"
          operator: "Equal"
          value: "true"
          effect: "NoSchedule"
      containers:
        - name: mysql
          image: mysql:latest
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: mysql-pvc
