k8s/auth-server-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: auth-server-deployment
  namespace: authserver
spec:
  replicas: 3
  selector:
    matchLabels:
      app: auth-server-app

  template:
    metadata:
      name: auth-server
      labels:
        app: auth-server-app
    spec:
      containers:
        - name: auth-server-app
          image: abhishekkargeti/authserviceimages
          ports:
            - containerPort: 8087
