k8s/mysl_service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysqlcontainer
  namespace: authserver
spec:
  clusterIP: None 
  selector:
    app: mysql
  ports:
    - port: 3306
      name: mysqlcontainer1
      targetPort: 3306
